--- a/package.json
+++ b/package.json
@@ -9,33 +9,33 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
     "@babel/plugin-proposal-throw-expressions": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@types/jest": "^27.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.4",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@types/jest": "^28.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "babel-jest": "^28.1.0",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^7.1.0",
-    "eslint": "^8.13.0",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest-dom": "^4.0.1",
+    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-testing-library": "^5.3.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "firebase-tools": "^10.6.0",
+    "firebase-tools": "^11.0.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "26.6.3",
@@ -43,41 +43,41 @@
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "sass-loader": "^12.6.0",
+    "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "26.5.6",
-    "ts-loader": "^9.2.7",
-    "typescript": "^4.6.3",
-    "webpack": "^5.72.0",
+    "terser-webpack-plugin": "^5.3.3",
+    "ts-jest": "28.0.4",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
+    "webpack-dev-server": "^4.9.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@faker-js/faker": "^6.1.2",
-    "@hookform/resolvers": "^2.8.8",
-    "@reduxjs/toolkit": "1.8.1",
+    "@faker-js/faker": "^7.1.0",
+    "@hookform/resolvers": "^2.9.0",
+    "@reduxjs/toolkit": "1.8.2",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^14.1.0",
-    "@types/react": "^18.0.3",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-redux": "^7.1.23",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/react": "^18.0.11",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
-    "firebase": "^9.6.10",
+    "firebase": "^9.8.2",
     "history": "^5.3.0",
     "mask-fn": "^1.0.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-hook-form": "^7.30.0",
-    "react-modal": "^3.14.4",
-    "react-redux": "^8.0.0-rc.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.3",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "redux": "4.1.2",
+    "redux": "4.2.0",
     "redux-devtools": "^3.7.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5",
