--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.config.js --hot --history-api-fallback --env PLATFORM='local' --env VERSION='stag'",
     "build": "webpack --config config/webpack.prod.config.js --progress --env PLATFORM='production' --env VERSION='stag'",
-    "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
@@ -17,10 +17,10 @@
     "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "@types/jest": "^28.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "babel-jest": "^28.1.0",
+    "@types/jest": "^28.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
@@ -40,8 +40,10 @@
     "firebase-tools": "^11.0.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "26.6.3",
-    "jest-junit": "^13.1.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-junit": "^13.2.0",
+    "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -53,23 +55,23 @@
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.1",
+    "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@faker-js/faker": "^7.1.0",
+    "@faker-js/faker": "^7.2.0",
     "@hookform/resolvers": "^2.9.0",
     "@reduxjs/toolkit": "1.8.2",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
-    "@types/react": "^18.0.11",
+    "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
-    "firebase": "^9.8.2",
+    "firebase": "^9.8.3",
     "history": "^5.3.0",
     "mask-fn": "^1.0.0",
     "react": "18.1.0",
