--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "editor.folding": true,
   "editor.foldingStrategy": "indentation",
-  "editor.formatOnSave": true,
-  "editor.rulers": [
-    100
-  ],
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.rulers": [100],
   "editor.showFoldingControls": "always",
   "editor.tabSize": 2,
   "scssFormatter.singleQuote": true
