--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
     "test:watch": "jest --watch",
     "emulator": "firebase emulators:start --only auth,firestore,storage,ui"
   },
   "devDependencies": {
     "@types/jest": "^29.1.1",
     "@vitejs/plugin-react": "^2.2.0",
-    "babel-jest": "^29.1.2",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-better-styled-components": "^1.1.2",
@@ -31,6 +30,8 @@
     "jest-transform-stub": "^2.0.0",
     "sass": "^1.56.1",
     "ts-jest": "^29.0.3",
+    "ts-jest-mock-import-meta": "^0.12.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.4",
     "vite-plugin-favicons-inject": "^2.1.0",
