--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.0.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.11.0",
-    "firebase-tools": "^11.16.1",
+    "firebase-tools": "^12.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-junit": "^14.0.1",
+    "jest-junit": "^16.0.0",
     "jest-transform-stub": "^2.0.0",
     "sass": "^1.63.6",
     "ts-jest": "^29.1.0",
-    "ts-jest-mock-import-meta": "^0.12.0",
+    "ts-jest-mock-import-meta": "^1.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
-    "vite": "^3.2.4",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
     "vite-plugin-favicons-inject": "^2.2.0",
     "vite-plugin-html": "^3.2.0"
   },
   "dependencies": {
-    "@faker-js/faker": "^7.5.0",
-    "@hookform/resolvers": "^2.9.8",
+    "@faker-js/faker": "^8.0.2",
+    "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "1.9.5",
-    "@testing-library/dom": "^8.18.1",
+    "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -64,7 +65,7 @@
     "redux": "4.2.1",
     "redux-devtools": "^3.7.0",
     "redux-saga": "^1.2.3",
-    "styled-components": "^5.3.6",
-    "yup": "^0.32.11"
+    "styled-components": "^6.0.0-rc.6",
+    "yup": "^1.2.0"
   }
 }
