--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.0.1",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.43.0",
@@ -29,6 +30,8 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^16.0.0",
     "jest-transform-stub": "^2.0.0",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
     "sass": "^1.63.6",
     "ts-jest": "^29.1.0",
     "ts-jest-mock-import-meta": "^1.0.0",
@@ -66,6 +69,7 @@
     "redux-devtools": "^3.7.0",
     "redux-saga": "^1.2.3",
     "styled-components": "^6.0.0-rc.6",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^5.0.3"
   }
 }
