--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "typescript": "^5.1.3",
     "vite": "^6.2.6",
     "vite-plugin-favicons-inject": "^2.2.0",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
