--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,23 @@
     "allowJs": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "module": "es2022",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "bundler",
     "noImplicitAny": false,
     "outDir": "./dist/",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "target": "es2022",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+      "@features/*": ["features/*"],
+      "@infrastructure/*": ["infrastructure/*"],
+    }
   },
   "include": [
     "./src/**/*",
