--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-autofix": "^2.2.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest-dom": "^5.0.1",
@@ -31,6 +32,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "jest-junit": "^16.0.0",
     "jest-transform-stub": "^2.0.0",
     "prettier": "^3.5.3",
